--- a/docs/v3.md
+++ b/docs/v3.md
@@ -23,17 +23,16 @@ Para definir a categoria do veículo, utilize o método `vehicleCategory`:
 \Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
   ->v3()
   ->axis(6)
-  ->category('caminhao')
+  ->vehicleCategory('caminhao')
 ```
 
 Para definir o local de origem de sua rota, deve ser utilizado o método `origin`:
-
 
 ```php
 \Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
     ->v3()
     ->axis(6)
-    ->category('caminhao')
+    ->vehicleCategory('caminhao')
     ->origin('Ponta Grossa - PR')
 ```
 
@@ -44,12 +43,96 @@ com os pontos por onde deseja passar:
 \Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
     ->v3()
     ->axis(6)
-    ->category('caminhao')
+    ->vehicleCategory('caminhao')
+    ->origin('Ponta Grossa - PR')
+    ->destinations([
+        'Curitiba - PR',
+        'São Paulo  - SP'
+    ]);
+```
+
+Para definir o formato em que deseja o retorno de sua consulta, você pode utilizar os métodos `json` e `xml`:
+
+Para consultas com respostas em formato `json`:
+```php
+\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
+    ->v3()
+    ->axis(6)
+    ->vehicleCategory('caminhao')
     ->origin('Ponta Grossa - PR')
     ->destinations([
         'Curitiba - PR',
         'São Paulo  - SP'
     ])
+    ->json();
+```
+
+Para consultas em formato `xml`:
+```php
+\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
+    ->v3()
+    ->axis(6)
+    ->vehicleCategory('caminhao')
+    ->origin('Ponta Grossa - PR')
+    ->destinations([
+        'Curitiba - PR',
+        'São Paulo  - SP'
+    ])
+    ->xml();
+```
+
+Caso você esteja fazendo uma requisição utilizando uma polilinha, você pode informá-la através do método `polyline`:
+```php
+\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
+    ->v3()
+    ->axis(6)
+    ->vehicleCategory('caminhao')
+    ->polyline('sua polilinha')
+```
+
+A precisão da polilinha é, por padrão, `6`, mas você pode alterá-la para 5 através do método `polylinePrecision`:
+```php
+\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
+    ->v3()
+    ->axis(6)
+    ->vehicleCategory('caminhao')
+    ->polyline('sua polilinha')
+    ->polylinePrecision(5)
 ```
 
 
+
+Por último, você precisa informar se deseja realizar um consulta através do método `post` ou `get`.
+
+Para fazer requisições utilizando uma polilinha, é obrigatório utilizar o método `post`.
+
+Utilizando método `get`:
+
+```php
+\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
+    ->v3()
+    ->axis(6)
+    ->vehicleCategory('caminhao')
+    ->origin('Ponta Grossa - PR')
+    ->destinations([
+        'Curitiba - PR',
+        'São Paulo  - SP'
+    ])
+    ->json()
+    ->get();
+```
+
+Para utilizar o método `post`:
+```php
+\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
+    ->v3()
+    ->axis(6)
+    ->vehicleCategory('caminhao')
+    ->origin('Ponta Grossa - PR')
+    ->destinations([
+        'Curitiba - PR',
+        'São Paulo  - SP'
+    ])
+    ->json()
+    ->post();
+```
