--- a/docs/v3.md
+++ b/docs/v3.md
@@ -9,6 +9,8 @@ Para integrar com o QualP, você precisa utilizar o cliente disponibilizado por 
 \Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')->v3();
 ```
 
+### Definindo o número de eixos
+
 Você precisa definir o número de eixos do veículo através do método `axis`:
 
 ```php
@@ -17,6 +19,8 @@ Você precisa definir o número de eixos do veículo através do método `axis`:
   ->axis(6)
 ```
 
+
+### Definindo a categoria do veículo:
 Para definir a categoria do veículo, utilize o método `vehicleCategory`:
 
 ```php
@@ -26,6 +30,7 @@ Para definir a categoria do veículo, utilize o método `vehicleCategory`:
   ->vehicleCategory('caminhao')
 ```
 
+### Definindo o local de origem de sua rota:
 Para definir o local de origem de sua rota, deve ser utilizado o método `origin`:
 
 ```php
@@ -35,6 +40,8 @@ Para definir o local de origem de sua rota, deve ser utilizado o método `origin
     ->vehicleCategory('caminhao')
     ->origin('Ponta Grossa - PR')
 ```
+
+### Definindo os pontos de destino:
 
 Para definir os pontos de destino, você deve utilizar o método `destinations`, passando um `array`
 com os pontos por onde deseja passar:
@@ -50,7 +57,7 @@ com os pontos por onde deseja passar:
         'São Paulo  - SP'
     ]);
 ```
-
+### Escolhendo o formato de resposta:
 Para definir o formato em que deseja o retorno de sua consulta, você pode utilizar os métodos `json` e `xml`:
 
 Para consultas com respostas em formato `json`:
@@ -81,6 +88,7 @@ Para consultas em formato `xml`:
     ->xml();
 ```
 
+### Informando uma polilinha
 Caso você esteja fazendo uma requisição utilizando uma polilinha, você pode informá-la através do método `polyline`:
 ```php
 \Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
@@ -90,6 +98,7 @@ Caso você esteja fazendo uma requisição utilizando uma polilinha, você pode 
     ->polyline('sua polilinha')
 ```
 
+### Alterando a precisão da polilinha
 A precisão da polilinha é, por padrão, `6`, mas você pode alterá-la para 5 através do método `polylinePrecision`:
 ```php
 \Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
@@ -106,6 +115,7 @@ Por último, você precisa informar se deseja realizar um consulta através do m
 
 Para fazer requisições utilizando uma polilinha, é obrigatório utilizar o método `post`.
 
+### Consultas através do método `get`:
 Utilizando método `get`:
 
 ```php
@@ -122,17 +132,20 @@ Utilizando método `get`:
     ->get();
 ```
 
+### Consultas através do método `post`:
+
 Para utilizar o método `post`:
 ```php
 \Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
     ->v3()
     ->axis(6)
     ->vehicleCategory('caminhao')
-    ->origin('Ponta Grossa - PR')
-    ->destinations([
-        'Curitiba - PR',
-        'São Paulo  - SP'
-    ])
+    ->polyline('sua polilinha')
+    ->polylinePrecision(5) // precisao em que sua polilinha foi codificada.
     ->json()
     ->post();
 ```
+
+Quando você utiliza o método post, é obrigatório enviar uma polilinha.
+
+
