--- a/docs/v3.md
+++ b/docs/v3.md
@@ -6,7 +6,7 @@ weight: 3
 Para integrar com o QualP, você precisa utilizar o cliente disponibilizado por este pacote:
 
 ```php
-\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')->v3();
+$apiQuery = \Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')->v3();
 ```
 
 ### Definindo o número de eixos
@@ -14,31 +14,21 @@ Para integrar com o QualP, você precisa utilizar o cliente disponibilizado por 
 Você precisa definir o número de eixos do veículo através do método `axis`:
 
 ```php
-\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
-  ->v3()
-  ->axis(6)
+$apiQuery->axis(6);
 ```
 
 
 ### Definindo a categoria do veículo:
-Para definir a categoria do veículo, utilize o método `vehicleCategory`:
-
+Para definir a categoria do veículo, utilize o método `vehicleCategory`. É possível informar `caminhao`, `carro`, `onibus`ou `moto`.
 ```php
-\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
-  ->v3()
-  ->axis(6)
-  ->vehicleCategory('caminhao')
+$apiQuery->vehicleCategory('caminhao'); //caminhao, carro, onibus ou moto
 ```
 
 ### Definindo o local de origem de sua rota:
 Para definir o local de origem de sua rota, deve ser utilizado o método `origin`:
 
 ```php
-\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
-    ->v3()
-    ->axis(6)
-    ->vehicleCategory('caminhao')
-    ->origin('Ponta Grossa - PR')
+$apiQuery->origin('Ponta Grossa - PR');
 ```
 
 ### Definindo os pontos de destino:
@@ -47,12 +37,7 @@ Para definir os pontos de destino, você deve utilizar o método `destinations`,
 com os pontos por onde deseja passar:
 
 ```php
-\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
-    ->v3()
-    ->axis(6)
-    ->vehicleCategory('caminhao')
-    ->origin('Ponta Grossa - PR')
-    ->destinations([
+$apiQuery->destinations([
         'Curitiba - PR',
         'São Paulo  - SP'
     ]);
@@ -62,54 +47,34 @@ Para definir o formato em que deseja o retorno de sua consulta, você pode utili
 
 Para consultas com respostas em formato `json`:
 ```php
-\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
-    ->v3()
-    ->axis(6)
-    ->vehicleCategory('caminhao')
-    ->origin('Ponta Grossa - PR')
-    ->destinations([
-        'Curitiba - PR',
-        'São Paulo  - SP'
-    ])
-    ->json();
+$apiQuery->json();
 ```
 
 Para consultas em formato `xml`:
 ```php
-\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
-    ->v3()
-    ->axis(6)
-    ->vehicleCategory('caminhao')
-    ->origin('Ponta Grossa - PR')
-    ->destinations([
-        'Curitiba - PR',
-        'São Paulo  - SP'
-    ])
-    ->xml();
+$apiQuery->xml();
 ```
+
+### 
 
 ### Informando uma polilinha
 Caso você esteja fazendo uma requisição utilizando uma polilinha, você pode informá-la através do método `polyline`:
 ```php
-\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
-    ->v3()
-    ->axis(6)
-    ->vehicleCategory('caminhao')
-    ->polyline('sua polilinha')
+$apiQuery->polyline('sua polilinha');
 ```
 
 ### Alterando a precisão da polilinha
 A precisão da polilinha é, por padrão, `6`, mas você pode alterá-la para 5 através do método `polylinePrecision`:
 ```php
-\Qualp\Api\QualpApiClient::withAccessToken('SEU_ACCESS_TOKEN')
-    ->v3()
-    ->axis(6)
-    ->vehicleCategory('caminhao')
-    ->polyline('sua polilinha')
-    ->polylinePrecision(5)
+$apiQuery->polylinePrecision(5);
 ```
 
+### Imagem estática da rota
+É possível incluir uma imagem estática da rota através do método `showStaticImage`:
 
+```php
+$apiQuery->showStaticImage();
+```
 
 Por último, você precisa informar se deseja realizar um consulta através do método `post` ou `get`.
 
